tests/spec/pass/generic_chan_param.aja
fuc produce(ch: chan[int]) -> void:
    send(ch, 7)

fuc consume(ch: chan[int]) -> int:
    return recv(ch)

ch = chan()
produce(ch)
print(consume(ch))
