tests/spec/fail/stack_trace_nested_call.aja
fuc inner() -> int:
    return int("bad")

fuc outer() -> int:
    return inner()

print(outer())
